# renderdoc-api-rs

./: .gitignore  Cargo.toml
examples/: version.rs
renderdoc-api-sys/: Cargo.toml
renderdoc-api-sys/src/: bindings.rs  lib.rs
src/: lib.rs
