[package]
name = "renderdoc-api"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
keywords = ["renderdoc"]
categories = [ "api-bindings" ]

[dependencies]
renderdoc-api-sys = { path = "renderdoc-api-sys", version = "0.1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.30"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
