[package]
name = "renderdoc-api"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "Apache-2.0"
keywords = ["renderdoc"]
categories = [ "api-bindings" ]
description = "High-level bindings to the renderdoc API"
repository = "https://github.com/Ralith/renderdoc-api-rs"
maintenance = { status = "experimental" }
is-it-maintained-open-issues = { repository = "https://github.com/Ralith/renderdoc-api-rs" }

[dependencies]
renderdoc-api-sys = { path = "renderdoc-api-sys", version = "0.1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.30"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
